// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gatsby-remark-responsive-iframe doesn't transform an iframe with dimensions: '100%' '100' 1`] = `
"  <iframe url=\\"http://www.example.com/\\" width=\\"100%\\" height=\\"100\\"></iframe>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an iframe with dimensions: '100' '100%' 1`] = `
"  <iframe url=\\"http://www.example.com/\\" width=\\"100\\" height=\\"100%\\"></iframe>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an iframe with dimensions: '100' 'invalid' 1`] = `
"  <iframe url=\\"http://www.example.com/\\" width=\\"100\\" height=\\"invalid\\"></iframe>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an iframe with dimensions: 'invalid' '100' 1`] = `
"  <iframe url=\\"http://www.example.com/\\" width=\\"invalid\\" height=\\"100\\"></iframe>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an object with dimensions: '100%' '100' 1`] = `
"  <object url=\\"http://www.example.com/\\" width=\\"100%\\" height=\\"100\\"></object>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an object with dimensions: '100' '100%' 1`] = `
"  <object url=\\"http://www.example.com/\\" width=\\"100\\" height=\\"100%\\"></object>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an object with dimensions: '100' 'invalid' 1`] = `
"  <object url=\\"http://www.example.com/\\" width=\\"100\\" height=\\"invalid\\"></object>
      "
`;

exports[`gatsby-remark-responsive-iframe doesn't transform an object with dimensions: 'invalid' '100' 1`] = `
"  <object url=\\"http://www.example.com/\\" width=\\"invalid\\" height=\\"100\\"></object>
      "
`;

exports[`gatsby-remark-responsive-iframe transforms an iframe with pixel width and height 1`] = `
"
          <div
            class=\\"gatsby-resp-iframe-wrapper\\"
            style=\\"padding-bottom: NaN%; position: relative; height: 0; overflow: hidden;\\"
          >
            <iframe url=\\"http://www.example.com/\\" style=\\"
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
          \\"></iframe>
    
          </div>
          "
`;

exports[`gatsby-remark-responsive-iframe transforms an iframe with unitless width and height 1`] = `
"
          <div
            class=\\"gatsby-resp-iframe-wrapper\\"
            style=\\"padding-bottom: 66.66666666666666%; position: relative; height: 0; overflow: hidden;\\"
          >
            <iframe url=\\"http://www.example.com/\\" style=\\"
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
          \\"></iframe>
    
          </div>
          "
`;

exports[`gatsby-remark-responsive-iframe transforms an object with pixel width and height 1`] = `
"
          <div
            class=\\"gatsby-resp-iframe-wrapper\\"
            style=\\"padding-bottom: NaN%; position: relative; height: 0; overflow: hidden;\\"
          >
            <object url=\\"http://www.example.com/\\" style=\\"
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
          \\"></object>
          </div>
          "
`;

exports[`gatsby-remark-responsive-iframe transforms an object with unitless width and height 1`] = `
"
          <div
            class=\\"gatsby-resp-iframe-wrapper\\"
            style=\\"padding-bottom: 66.66666666666666%; position: relative; height: 0; overflow: hidden;\\"
          >
            <object url=\\"http://www.example.com/\\" style=\\"
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
          \\"></object>
          </div>
          "
`;
